--- a/package.json
+++ b/package.json
@@ -1,25 +1,18 @@
 {
-
-  "name": "bent",
-
-  "description": "benbot",
-
-  "version": "0.0.0",
-
-  "main": "bot.js",
-
+  "name": "dm-allv2",
+  "version": "2.0.1",
+  "description": "A bot to send DM's to every user in a Discord server.",
+  "main": "app.js",
   "scripts": {
-
-    "start": "node bot.js"
-
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-
+  "author": "Alex",
+  "license": "ISC",
   "dependencies": {
-
-    "discord.js": "11.1.0",
-
-    "request": "2.81.0"
-
+    "colors": "^1.3.1",
+    "discord.js": "^11.4.1",
+    "discord.js-commando": "^0.10.0",
+    "figlet": "^1.2.0",
+    "readline": "^1.3.0"
   }
-
 }
